# AdvancedWebCrawler

./: .gitignore  CI_FIXES.md  DEPLOYMENT_SUCCESS.md  GITHUB_README.md  LICENSE  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  demo_crawler.py  deploy.py  health_check.py  list_all_files.py  project_info.json  project_info.py  pyproject.toml  requirements-ci.txt  requirements.txt  run_crawler.py  scrapy.cfg  show_structure.py  test_ci.py  test_setup.py  verify_project.py
.github/workflows/: ci-simple.yml  ci.yml
config/: custom_settings.py
data/: .gitkeep
examples/: run_examples.py
tests/: test_document_processor.py
utils/: document_processor.py
webcrawler/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
webcrawler/spiders/: main_spider.py
